--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
+        <!-- MainActivity sebagai activity pertama -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -16,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Tambahkan DashboardActivity -->
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false" />
 
     </application>
 
