--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,22 +10,32 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
-        <!-- MainActivity sebagai activity pertama -->
+        <!-- DashboardActivity sebagai activity pertama (LAUNCHER) -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <!-- Tambahkan DashboardActivity -->
+
         <activity
             android:name=".DashboardActivity"
             android:exported="false" />
+
+        <!-- LoginActivity -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+
+        <!-- HomeActivity (setelah login berhasil) -->
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
