--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.projektpq">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Izin internet untuk Firebase dan MySQL API -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -23,7 +22,6 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,29 +29,64 @@
             </intent-filter>
         </activity>
 
+        <!-- DashboardActivity (Welcome Screen) -->
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+
         <!-- LoginActivity -->
         <activity
             android:name=".LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden"
-            android:launchMode="singleTop" />
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
 
-        <!-- HomeActivity untuk user biasa -->
+        <!-- ResetPasswordActivity -->
+        <activity
+            android:name=".ResetPasswordActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden"
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity" />
+        </activity>
+
+        <!-- HomeActivity untuk user -->
         <activity
             android:name=".HomeActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:launchMode="singleTask" />
+            android:theme="@style/AppTheme" />
 
-        <!-- DashboardActivity untuk Super Admin -->
+        <!-- ManajemenMuridActivity -->
         <activity
-            android:name=".DashboardActivity"
+            android:name=".ManajemenMuridActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"
-            android:launchMode="singleTask" />
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".HomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <!-- DetailSiswaActivity -->
+        <activity
+            android:name=".DetailSiswaActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:parentActivityName=".ManajemenMuridActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenMuridActivity" />
+        </activity>
 
     </application>
 
