--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,61 +1,198 @@
-<!-- Tambahkan activity baru di dalam <application> -->
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-<!-- PilihJilidActivity -->
-<activity
-    android:name=".PilihJilidActivity"
-    android:exported="false"
-    android:screenOrientation="portrait"
-    android:theme="@style/AppTheme"
-    android:parentActivityName=".HomeActivity">
-    <meta-data
-        android:name="android.support.PARENT_ACTIVITY"
-        android:value=".HomeActivity" />
-</activity>
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-    <!-- ManajemenSoalActivity -->
-<activity
-android:name=".ManajemenSoalActivity"
-android:exported="false"
-android:screenOrientation="portrait"
-android:theme="@style/AppTheme"
-android:parentActivityName=".PilihJilidActivity">
-<meta-data
-    android:name="android.support.PARENT_ACTIVITY"
-    android:value=".PilihJilidActivity" />
-</activity>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="false"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:supportsRtl="true"
+        tools:targetApi="31">
 
-    <!-- HistoriActivity -->
-<activity
-android:name=".HistoriActivity"
-android:exported="false"
-android:screenOrientation="portrait"
-android:theme="@style/AppTheme"
-android:parentActivityName=".HomeActivity">
-<meta-data
-    android:name="android.support.PARENT_ACTIVITY"
-    android:value=".HomeActivity" />
-</activity>
+        <!-- MainActivity sebagai LAUNCHER (Splash Screen) -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-    <!-- TambahSoalActivity (opsional, untuk fitur tambah soal) -->
-<activity
-android:name=".TambahSoalActivity"
-android:exported="false"
-android:screenOrientation="portrait"
-android:theme="@style/AppTheme"
-android:parentActivityName=".ManajemenSoalActivity">
-<meta-data
-    android:name="android.support.PARENT_ACTIVITY"
-    android:value=".ManajemenSoalActivity" />
-</activity>
+        <!-- DashboardActivity (Welcome Screen) -->
+        <activity
+            android:name=".DashboardActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
 
-    <!-- LihatSoalActivity (opsional, untuk fitur lihat soal) -->
-<activity
-android:name=".LihatSoalActivity"
-android:exported="false"
-android:screenOrientation="portrait"
-android:theme="@style/AppTheme"
-android:parentActivityName=".ManajemenSoalActivity">
-<meta-data
-    android:name="android.support.PARENT_ACTIVITY"
-    android:value=".ManajemenSoalActivity" />
-</activity>
+        <!-- LoginActivity -->
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+
+        <!-- ResetPasswordActivity -->
+        <activity
+            android:name=".ResetPasswordActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity" />
+        </activity>
+
+        <!-- HomeActivity untuk Admin Biasa dan User -->
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+
+        <!-- HomeDevActivity untuk SUPER ADMIN -->
+        <activity
+            android:name=".HomeDev"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+
+        <!-- PilihJilidActivity -->
+        <activity
+            android:name=".PilihJilidActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <!-- ManajemenSoalActivity -->
+        <activity
+            android:name=".ManajemenSoalActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".PilihJilidActivity" />
+        </activity>
+
+        <!-- TambahSoalActivity - BARU DITAMBAHKAN -->
+        <activity
+            android:name=".TambahSoalActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenSoalActivity" />
+        </activity>
+
+        <!-- LihatSoalActivity - BARU DITAMBAHKAN -->
+        <activity
+            android:name=".LihatSoalActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenSoalActivity" />
+        </activity>
+
+        <!-- EditSoalActivity - BARU DITAMBAHKAN -->
+        <activity
+            android:name=".EditSoalActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenSoalActivity" />
+        </activity>
+
+        <!-- UjianActivity - BARU DITAMBAHKAN -->
+        <activity
+            android:name=".UjianActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenSoalActivity" />
+        </activity>
+
+        <!-- HistoriActivity -->
+        <activity
+            android:name=".HistoriActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <!-- ManajemenMuridActivity -->
+        <activity
+            android:name=".ManajemenMuridActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <!-- DetailSiswaActivity -->
+        <activity
+            android:name=".DetailSiswaActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ManajemenMuridActivity" />
+        </activity>
+
+        <!-- AkunActivity -->
+        <activity
+            android:name=".AkunActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+        <!-- PengaturanActivity -->
+        <activity
+            android:name=".PengaturanActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomeActivity" />
+        </activity>
+
+    </application>
+
+</manifest>
