--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="false"
+        android:usesCleartextTraffic="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         tools:targetApi="31">
@@ -65,7 +65,7 @@
 
         <!-- HomeDevActivity untuk SUPER ADMIN -->
         <activity
-            android:name="HomeDev"
+            android:name=".HomeDev"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
@@ -92,7 +92,7 @@
                 android:value=".PilihJilidActivity" />
         </activity>
 
-        <!-- TambahSoalActivity - BARU DITAMBAHKAN -->
+        <!-- TambahSoalActivity -->
         <activity
             android:name=".TambahSoalActivity"
             android:exported="false"
@@ -104,7 +104,7 @@
                 android:value=".ManajemenSoalActivity" />
         </activity>
 
-        <!-- LihatSoalActivity - BARU DITAMBAHKAN -->
+        <!-- LihatSoalActivity -->
         <activity
             android:name=".LihatSoalActivity"
             android:exported="false"
@@ -115,7 +115,7 @@
                 android:value=".ManajemenSoalActivity" />
         </activity>
 
-        <!-- EditSoalActivity - BARU DITAMBAHKAN -->
+        <!-- EditSoalActivity -->
         <activity
             android:name=".EditSoalActivity"
             android:exported="false"
@@ -127,7 +127,7 @@
                 android:value=".ManajemenSoalActivity" />
         </activity>
 
-        <!-- UjianActivity - BARU DITAMBAHKAN -->
+        <!-- MulaiUjianActivity -->
         <activity
             android:name=".MulaiUjianActivity"
             android:exported="false"
